# new-functions-template

./: CargoLambda.toml  LICENSE  README.md
.github/: FUNDING.yml
.github/actions/rust-setup/: action.yml
.github/workflows/: test.yml
template/: Cargo.toml  README.md
template/src/: event_handler.rs  http_handler.rs  main.rs
