[package]
name = "{{ project_name }}"
version = "0.1.0"
edition = "2021"

[dependencies]
{% if event_type_import -%}
{% if event_type_import == "serde_json::Value" -%}
serde_json = "1"
{% else -%}
aws_lambda_events = { version = "{{ aws_lambda_events_version | default: "0.15.1" }}", default-features = false, features = ["{{ event_type_feature }}"] }
{% endif -%}
{% endif -%}
{% if http_function -%}
{%- if http_feature -%}
lambda_http = { version = "{{ lambda_http_version | default: "0.13.0" }}", default-features = false, features = ["{{ http_feature }}", "tracing"] }
{%- else -%}
lambda_http = "{{ lambda_http_version | default: "0.13.0" }}"
{%- endif -%}
{%- endif %}
{% if http_function != true -%}
lambda_runtime = "{{ lambda_runtime_version | default: "0.13.0" }}"
{%- endif %}
{% if basic_example -%}
serde = "1"
{% endif -%}
tokio = { version = "1", features = ["macros"] }
{%- if function_name %}
[[bin]]
name = "{{ function_name }}"
path = "src/main.rs"
test = false
{%- endif %}
